--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .base-link {
+    @apply font-medium;
+  }
+  /* ... */
+}
